add tests for GitHubHttpClient method getRepositoriesInformationForUser()